# FastApiProject1

./: .env.example  README.md  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  tree.txt
routers/: conacts.py  contacts.py  favorites.py  groups.py  messages.py  notifications.py  profile.py  status.py  users.py
